--- a/views/layout/header.twig
+++ b/views/layout/header.twig
@@ -1,4 +1,5 @@
 
+<header>
 <nav id="navbar-example2" class="navbar navbar-light bg-light px-3">
   <a class="navbar-brand" href="css/logo/happy-planter.png">HAPPY PLANTERS</a>
   <ul class="nav nav-pills">
@@ -14,3 +15,4 @@
     </li>
   </ul>
 </nav>
+</header>
