--- a/views/pages/connexion.twig
+++ b/views/pages/connexion.twig
@@ -10,8 +10,8 @@
 
 
 	<section style="text-align:center" class=" row col-lg-9 col-md-auto" >
-		<h1 >Inscription</h1>
-		<form method="post" action="/subscribe" class = "connect">
+		<h1 >Connection</h1>
+		<form method="post" action="/findOne" class = "connect">
 			
 			<article>
 				<div>
@@ -20,14 +20,6 @@
 				<br>
 				<div>
 					<input type="texte" id="name" name="name">
-				</div>
-				<br>
-				<div>
-					<label for="mail">Mail</label>
-				</div>
-				<br>
-				<div>
-					<input type="text" id="mail" name="mail">
 				</div>
 				<br>
 				<div>
