--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,9 @@
     padding: 5px 10px 5px 10px;
     display: flex;
     justify-content: space-between;
+    position:absolute;
+    width: 100%;
+    bottom: 0;
 }
 
 .img {
