--- a/assets/css/directory.css
+++ b/assets/css/directory.css
@@ -5,3 +5,14 @@
     min-width: 100%;
     min-height: 100%;
 }
+
+.card-body{
+width: 300px;
+height: 120px;
+border-radius: 10%;
+}
+
+.imgCard{
+    width: 80px;
+    height: 80px;
+}
