--- a/views/pages/connexion.twig
+++ b/views/pages/connexion.twig
@@ -10,7 +10,7 @@
 
 
 	<section style="text-align:center" class=" row col-lg-9 col-md-auto" >
-		<h1 >Connection</h1>
+		<h1 >Connexion</h1>
 		<form method="post" action="/findOne" class = "connect">
 			
 			<article>
