--- a/views/pages/directory.twig
+++ b/views/pages/directory.twig
@@ -16,7 +16,7 @@
 				<article class="col-4">
 					<div class="fond card" style="background-color: {{plante.plantColor}}">
 						<div class="card-body">
-							<div><img src="../images/plantes/{{plante.image}}" alt=""></div>
+							<div><img src="../images/plantes/{{plante.image}}" alt="" class="imgCard"></div>
 							<p class="card-text">{{plante.family}}</p>
 							<p class="card-text">{{plante.name}}</p>
 							<p class="card-text">{{plante.watering}}</p>
@@ -30,7 +30,7 @@
 				<article class="col-4">
 					<div class="fond card" style="background-color: {{plante.plantColor}}">
 						<div class="card-body">
-							<div><img src="../images/plantes/{{plante.image}}" alt=""></div>
+							<div><img src="../images/plantes/{{plante.image}}" alt="" class="imgCard"></div>
 							<p class="card-text">{{plante.family}}</p>
 							<p class="card-text">{{plante.name}}</p>
 							<p class="card-text">{{plante.watering}}</p>
