--- a/views/pages/subscribe.twig
+++ b/views/pages/subscribe.twig
@@ -11,7 +11,7 @@
 
 	<section style="text-align:center" class=" row col-lg-9 col-md-auto" >
 		<h1 >Inscription</h1>
-		<form method="post" action="/subscribe" class = "connect">
+		<form method="post" action="/addUser" class = "connect">
 			
 			<article>
 				<div>
@@ -39,7 +39,7 @@
 				</div>
 				<br>
 				<div>
-					<button type="submit">Validez</button>
+					<button type="submit" >Validez</button>
 				</div>
 			</article>
 		</form>
