--- a/views/main.twig
+++ b/views/main.twig
@@ -16,7 +16,7 @@
 			{% include "/layout/header.twig"%}
 		{% endblock %}
 
-		<main class="container">
+		<main class="container-fluid">
 			{% block main %}
 			
 			{% endblock %}
