--- a/views/pages/connexion.twig
+++ b/views/pages/connexion.twig
@@ -10,16 +10,16 @@
 
 
 	<section style="text-align:center" class=" row col-lg-9 col-md-auto" >
-		<h1 >Connection</h1>
-		<form method="post" action="/findOne" class = "connect">
+		<h1 >Connexion</h1>
+		<form method="post" action="/connexion" class = "connect">
 			
 			<article>
 				<div>
-					<label for="user">Pseudo</label>
+					<label for="user">Mail</label>
 				</div>
 				<br>
 				<div>
-					<input type="texte" id="name" name="name">
+					<input type="texte" id="mail" name="mail">
 				</div>
 				<br>
 				<div>
