--- a/views/pages/home.twig
+++ b/views/pages/home.twig
@@ -6,11 +6,9 @@
 {% endblock %}
 
 {% block main %}
-	<div>
-		<img src="../images/logo/happy-planter.png" alt="" width="500" height="500" class="rounded mx-auto d-block">
-	</div>
+	
 	<section style="text-align:center">
-	<div>
+	<div class= "titre">
 		<label for="user">Entrez le nom de votre plante</label>
 	</div>
 	<br>
