--- a/assets/css/connect.css
+++ b/assets/css/connect.css
@@ -1,5 +1,22 @@
+.navbar-brand{
+    font-size: xx-large;
+}
+
 body{
- background-color: #9FAF94;
+ background-image: url(../images/fond/accueil.jpg);
+ background-repeat: no-repeat;
+ background-size: cover;
+
+
+}
+.titre{
+    margin-top: 230px;
+   background-color: #D1D1BA;
+    font-size: large;
+    border: 2px solid black;
+    border-radius: 10px 10px 0px 0px;
+    margin-left: 350px;
+    margin-right: 350px;
 }
 h1{
     padding: 10px;
@@ -8,23 +25,21 @@ h1{
     margin-top: 150px !important;
     border-radius: 10px 10px 0px 0px;
 }
-
-
-
 .connect{
-  border: 2px solid #005C53;
+    border: 2px solid #005C53;
     border-radius: 0px 0px 10px 10px;
     background-color: #005C53;
     margin: 0px 0px 30px 150px;
-}
-
+} 
 
 input{
     border-radius: 0px 10px 0px 10px;
     background-color: #D1D1BA;
+  
 }
 button{
     border-radius: 0px 10px 0px 10px;
+    background-color: #005C53;
     margin-bottom: 40px;
-    background-color: #aba463;
+    color: white;
 }
