--- a/assets/css/directory.css
+++ b/assets/css/directory.css
@@ -1,10 +1,24 @@
+.navbar-brand{
+    font-size: xx-large;
+}
 .img-fond{
     background-image: url(../images/fond/database.jpg);
-    
 }
+
+ .card-int{
+background-color:  #9FAF94;
+
+ }   
+
+ .card-ext{
+    background-color: #D1D1BA;
+ }
+
+
 .fond-interior {
     background-color:#D1D1BA;
-    margin-top: 20px
+    margin-top: 20px;
+    
 }
 .fond-exterior{
     background-color: #9FAF94;
@@ -14,9 +28,14 @@
     .imgCard{
         width: 100px;
         height: 100px;
+   
     }
     .card-body{
        width: 400px;  
         border-radius: 10%; 
     }
+    .mr{
+        margin-right: 3px;
+    }
+    
         
